--- a/RemoteDriverConfig.wiki
+++ b/RemoteDriverConfig.wiki
@@ -19,6 +19,9 @@ Specify the URL of the Selenium Grid. The URL must be correct, if you specify a 
 === Capability ===
 Specify which browser selects from your Selenium Grid. Currently it only selects the browser matching the browserName. So if you are running three concurrent users it will spin three browser instances in a selenium grid node.
 
+For Internet Explorer, the system will ask your Selenium Grid to launch Microsoft Edge in InternetExplorer 11 (IE) mode. So be sure to specify the remote server's path to msedge.exe appropriately.
+Upon start-up, IE will load "http://wwww.bing.com". So ensure the remote server can access this url otherwise the driver will fail.
+
 === Headless ===
 Specify if the browser is to be run in headless mode.
 
