--- a/FirefoxDriverConfig.wiki
+++ b/FirefoxDriverConfig.wiki
@@ -3,11 +3,9 @@
 == Introduction ==
 Add this configuration to enable browser based performance testing using Firefox.  This document covers the various configuration options available on the Firefox browser.  For an overview of performing client sider performance testing, refer to the [WebDriverTutorial Web Driver Tutorial].  
 
-Different browsers have different levels of setup complexity.  In the overall scheme of things, using a Firefox Browser is considered to have an *easy level* of setup complexity. However, it is important to realise that due to the rapid releases of Firefox, the latest Firefox version may not work with the latest WebDriver set. The table below describes the version of Firefox that is compatible with JMeterPlugins:
+Different browsers have different levels of setup complexity.  In the overall scheme of things, using a Firefox Browser is considered to have an *easy level* of setup complexity. However, it is important to realise that due to the rapid releases of Firefox, the latest Firefox version may not work with the latest WebDriver set.
 
-|| JMeterPlugins version || Firefox compatible version ||
-|| 1.1.2                 || 22                         ||
-|| 1.1.3                 || 26                         ||
+As per Selenium 4, it requires Firefox 78 or greater. It is also recommended to always use the latest version of geckodriver.
 
 *Specific versions of Firefox is available for download at the [https://ftp.mozilla.org/pub/mozilla.org/firefox/releases/ Firefox Website]*.
 
@@ -57,6 +55,11 @@ This is a comma separated list of all host(s) and/or IP Address(es) that will by
 For networks that have a proxy configuration server (PAC), and its name and the location of the PAC file is known, please use this option.  The usual configuration for this is {{{http://proxy-server/proxy.pac}}}
 
 == Firefox ==
+For Web Driver controls to work against Firefox, it is important to:
+  # [https://github.com/mozilla/geckodriver/releases Download the geckodriver driver] for your Operating System.
+  # Unzip the binary to a specific location
+  # Specify the path to the geckodriver.exe in the "Path to Firefox Driver" field in this tab.
+
 The Firefox browser allows its user agent to be overridden. To do so, check the 'Override User Agent' checkbox and then paste in the user agent string to use. The UserAgentString.com site has an [http://www.useragentstring.com/pages/useragentstring.php extensive list of user agent strings].
 
 There is also an option to enable NTLM
