--- a/RemoteDriverConfig.wiki
+++ b/RemoteDriverConfig.wiki
@@ -25,11 +25,8 @@ Once you have selected the browser in the Capability list box, navigate to the a
 
 For more information on the options, please refer to [[DirectDriverConfig.wiki#Options Tab|Options Tab]] in the Direct Driver wiki page.
 
-== Capabilties Management Tab ==
-This tab enables custom webdriver capability configuration using Json as input.
-These custom capabilities are appended after the browser options configured from all other tabs.
-
-This is especically useful when using webdriver W3C capabilites, which allow more advanced/custom webdriver requests.
-
 == Proxy Tab ==
 Please see the [[DirectDriverConfig.wiki#Proxy Tab|Proxy Tab]] in the Direct Driver wiki page for more information on the Proxy settings of browser.
+
+== Capabilties Management Tab ==
+Please see the [[DirectDriverConfig.wiki#Capabilties Management Tab|Capabilties Management Tab]] in the Direct Driver wiki page for more information on configuring custom webdriver capabilties.
